fixed landing background spacing; implemented inner-block-wrapper migration; fixed editor display bugs for resource and toolkit detail blocks

--- a/src/scss/block/_categories-toolkits-contact.scss
+++ b/src/scss/block/_categories-toolkits-contact.scss
@@ -189,7 +189,7 @@
                 top: 5vh;
                 height: 65vw;
                 width: 60vw;
-                margin-left: -75vw;
+                margin-left: -50vw;
                 opacity: 0.8;
             }
             &__featured {
